# NYSE-XDP

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  notes.ipynb  order_book.hpp  reader  reader.cpp  symbol_nyse.txt  symbol_nyse_parsed.csv  visualization.cpp  visualizer_main.cpp  visualizer_pcap.cpp
documentation/: ARCHITECTURE.md  hft_architecture_paper.tex  hypothesis_test_results.json  market_maker_manuscript.tex  parameter_sensitivity.json  results.txt  results_manifest.json  review_managing_director.md  review_quant_developer.md  review_quant_researcher.md  review_software_engineer.md
documentation/analysis_output/: advanced_analysis.json  fills_group_1.csv  fills_group_10.csv  fills_group_11.csv  fills_group_12.csv  fills_group_13.csv  fills_group_14.csv  fills_group_2.csv  fills_group_3.csv  fills_group_4.csv  fills_group_5.csv  fills_group_6.csv  fills_group_7.csv  fills_group_8.csv  fills_group_9.csv  symbols_group_1.csv  symbols_group_10.csv  symbols_group_11.csv  symbols_group_12.csv  symbols_group_13.csv  symbols_group_14.csv  symbols_group_2.csv  symbols_group_3.csv  symbols_group_4.csv  symbols_group_5.csv  symbols_group_6.csv  symbols_group_7.csv  symbols_group_8.csv  symbols_group_9.csv
scripts/: analyze_fills.py  analyze_results.py  generate_figures.py  parameter_sensitivity.py  reproduce.sh  run_full_day.sh  test_hypotheses.py
src/: execution_model.hpp  feature_trackers.hpp  market_maker.cpp  market_maker.hpp  market_maker_sim.cpp  order_book.hpp  per_symbol_sim.cpp  per_symbol_sim.hpp  reader.cpp  sim_types.hpp  visualizer_main.cpp  visualizer_pcap.cpp
src/common/: mmap_pcap_reader.hpp  pcap_reader.hpp  symbol_map.cpp  symbol_map.hpp  thread_pool.hpp  xdp_types.hpp  xdp_utils.hpp
